# logilinux

./: CMakeLists.txt
examples/: CMakeLists.txt  gif-test.cpp  tic-tac-toe.cpp  video-test.cpp
lib/src/devices/: mx_keypad_device.cpp  mx_keypad_device.h
tools/: CMakeLists.txt  README.md  dialpad-grab.cpp  dialpad-monitor.cpp  keypad-monitor.cpp  keypad-set-color.cpp  keypad-set-gif.cpp  keypad-set-image.cpp  logilinux-devices.cpp
